<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/backGround" >

    <RelativeLayout
        android:id="@+id/headerRelativeLayout"
        style="@style/header" >

        <ImageView
            android:id="@+id/farwordImageView"
            style="@style/farwordButton" />

        <TextView
            android:id="@+id/headerTextView"
            style="@style/headerText"
            android:text="@string/customerLoginHeader"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/logoImageView"
        style="@style/logoImage" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footerRelativeLayout"
        android:layout_below="@+id/logoImageView" >

        <RelativeLayout
            android:id="@+id/outerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip" >

            <TableLayout
                android:id="@+id/nameTableLayout"
                style="@style/tableStyle" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/nametextView"
                        style="@style/textView"
                        android:text="@string/yourEmail" />

                    <EditText
                        android:id="@+id/textEmail"
                        style="@style/tableEditText"
                        android:inputType="textEmailAddress" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/textView"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/txtPassword"
                        style="@style/tableEditText"
                        android:inputType="textPassword" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/checkBoxLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTableLayout"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:background="@drawable/checkbox_background"
                    android:button="@drawable/mycheckbox"
                    android:text="@string/rememberme"
                    android:textColor="#fff"
                    android:textSize="13dip" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/phoneTableLayout"
                style="@style/tableStyle"
                android:layout_below="@+id/checkBoxLinearLayout" >
            </TableLayout>

            <RelativeLayout
                android:id="@+id/textLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneTableLayout"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textForgot"
                    style="@style/textView"
                    android:layout_below="@+id/registerButton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dip"
                    android:text="@string/cantaccess" />

                <Button
                    android:id="@+id/registerButton"
                    style="@style/buttonHCenter"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login"
                    android:textColor="#fff" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/footerRelativeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textLinearLayout"
                android:layout_marginTop="15dip"
                android:background="@drawable/footer" >

                <TextView
                    android:id="@+id/textTextView12"
                    style="@style/textView"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dip"
                    android:text="@string/notexisting" />

                <Button
                    android:id="@+id/startOrderingButton"
                    style="@style/buttonHVCenter"
                    android:layout_below="@+id/textTextView12"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/btn_register"
                    android:textColor="#fff" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>